sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: not found: value GetValeur
        v = GetValeur(i-j)
            ^